apps/clubs/cedille/website/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: cedille
spec:
  virtualhost:
    fqdn: cedille.etsmtl.ca
    tls:
      secretName: cedille-cert-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: cedille-service
          port: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: cedille-prod
spec:
  virtualhost:
    fqdn: cedille.prodv2.cedille.club
    tls:
      secretName: cedille-cert-tls-prod
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: cedille-service
          port: 80
