apps/clubs/cedille/website/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cedille
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - cedille.etsmtl.ca
      secretName: cedille-cert-tls
  rules:
    - host: cedille.etsmtl.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cedille-service
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cedille-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: contour
  tls:
    - hosts:
        - cedille.prodv2.cedille.club
      secretName: cedille-cert-tls-prod
  rules:
    - host: cedille.prodv2.cedille.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cedille-service
                port:
                  name: http
